# laravel.vpd121.com/app/Models/Category.php
@@ -9,6 +9,16 @@ class Category extends Model
 {
     use HasFactory;
     protected $fillable=[
-        "name","image","description"
+        "name",
+        "image",
+        "description"
     ];
+
+    /**
+     * Get the products for the category.
+     */
+    public  function  products()
+    {
+        return $this->hasMany(Product::class);
+    }
 }
