# my-app/src/components/product/list/types.ts
@@ -1,0 +1,7 @@
+export interface IProductItem {
+    id: number;
+    category_id:number,
+    name: string;
+    price: number;
+    description: string;
+};
